sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:3: error: not found: value ecart
  ecart = lgr;
  ^AlgCombSort:6: error: not found: value ecart
    if (ecart > 1) {
        ^AlgCombSort:7: error: not found: value ecart
      ecart = (ecart.toDouble / 1.3).toInt;
      ^AlgCombSort:9: error: not found: value i
    i = 0;
    ^AlgCombSort:10: error: not found: value i
    while (i+ecart < lgr) {
           ^AlgCombSort:10: error: not found: value ecart
    while (i+ecart < lgr) {
             ^AlgCombSort:10: error: not found: value lgr
    while (i+ecart < lgr) {
                     ^AlgCombSort:11: error: not found: value i
      if (isSmaller(i, i+ecart)) {
                    ^AlgCombSort:11: error: not found: value i
      if (isSmaller(i, i+ecart)) {
                       ^AlgCombSort:11: error: not found: value ecart
      if (isSmaller(i, i+ecart)) {
                         ^AlgCombSort:12: error: not found: value i
        swap(i, i+ecart);
             ^AlgCombSort:12: error: not found: value i
        swap(i, i+ecart);
                ^AlgCombSort:12: error: not found: value ecart
        swap(i, i+ecart);
                  ^AlgCombSort:14: error: not found: value i
        i += 1;
        ^AlgCombSort:17: error: not found: value ecart
  } while ((ecart > 1) || !haveBeenSorted);
            ^AlgCombSort:17: error: not found: value haveBeenSorted
  } while ((ecart > 1) || !haveBeenSorted);
                           ^